淘鱼查询发布基本完成 1..主界面（学习、出行、娱乐）查询展示 话题圈 1.完善布局文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,8 +90,10 @@
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.UserSettingActivity" />
         <activity
-            android:name=".activity.TopicTalkActivity"
+            android:name=".activity.tapictalk.TopicTalkActivity"
             android:launchMode="singleTask" />
+        <activity android:name=".activity.tapictalk.topic2Activity"/>
+        <activity android:name=".activity.tapictalk.Topic_pub"/>
         <activity
 
             android:name="me.iwf.photopicker.PhotoPickerActivity" />
