淘鱼 1.等待商品详情页 2.购物车待定 话题圈 1.完善布局文件 2.发布话题圈图片选择

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
             android:name=".activity.tapictalk.TopicTalkActivity"
             android:launchMode="singleTask" />
         <activity android:name=".activity.tapictalk.topic2Activity"/>
-        <activity android:name=".activity.tapictalk.Topic_pub"/>
+        <activity android:name=".activity.tapictalk.TopicPublishActivity"/>
         <activity
 
             android:name="me.iwf.photopicker.PhotoPickerActivity" />
