淘鱼 1.商品详情页 话题圈 确定接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,8 @@
 
         <activity android:name=".activity.taoyu.TaoyuSearchActivity" />
         <activity android:name=".activity.taoyu.TaoyuPublishGoodActivity" />
+        <activity android:name=".activity.taoyu.TaoyuDetialActivity"
+            />
         <activity android:name=".activity.treehole.TreeHoleActivity" />
         <activity android:name=".activity.parttimejob.PartTimeJobActivity" />
         <activity
