淘鱼 1.商品详情页完成 2.查询商品完成 3.发布一级评论完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,8 @@
         <service android:name=".service.CheckLogin" />
 
         <activity android:name=".activity.taoyu.TaoyuSearchActivity" />
-        <activity android:name=".activity.taoyu.TaoyuPublishGoodActivity" />
+        <activity android:name=".activity.taoyu.TaoyuPublishGoodActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".activity.taoyu.TaoyuDetialActivity"
             />
         <activity android:name=".activity.treehole.TreeHoleActivity" />
