--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -48,7 +48,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yancy.imageselector:imageselector:1.2.0'
     //图片选择器（上传头像使用）
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.7@aar'
     compile 'org.xutils:xutils:3.5.0'
     compile 'org.jsoup:jsoup:1.10.2'
