--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,7 @@
         <activity android:name=".activity.saylvoeActivity.SayLoveActivity" />
         <activity android:name=".activity.saylvoeActivity.IWantSayLoveActivity" />
         <activity android:name=".activity.taoyu.TaoyuActivity" />
+        <activity android:name=".activity.taoyu.ShopcartActivity"/>
         <activity
             android:name=".activity.schoolnewsActivity.SchoolNewsSubjectActivity"
             android:windowSoftInputMode="adjustPan" />
