淘鱼 1.购物车的添加、删除、查询完成 2.发布二级评论完成 3.评论点赞完成 4.界面美化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,7 @@
         <activity android:name=".activity.saylvoeActivity.IWantSayLoveActivity" />
         <activity android:name=".activity.taoyu.TaoyuActivity" />
         <activity android:name=".activity.taoyu.ShopcartActivity"/>
+        <activity android:name=".activity.taoyu.TaoyuChildConmmentsActivity"/>
         <activity
             android:name=".activity.schoolnewsActivity.SchoolNewsSubjectActivity"
             android:windowSoftInputMode="adjustPan" />
