更换轮播控件 接入轮播接口 话题圈修改布局、发布一级主题、上传图片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:launchMode="singleTask" />
         <activity android:name=".activity.tapictalk.TopicInfoActivity"/>
         <activity android:name=".activity.tapictalk.TopicPublishActivity"/>
-
+        <activity android:name=".activity.tapictalk.ThemePublishActivity"/>
         <!-- 淘鱼 -->
         <activity android:name=".activity.taoyu.TaoyuActivity" />
         <activity android:name=".activity.taoyu.ShopcartActivity"/>
