一起玩 发布群组、发布动态 加入群组 查询群组

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".activity.palytogether.PublishGroupActivity"/>
         <activity android:name=".activity.palytogether.PublishDynamicActivity"/>
         <activity android:name=".activity.palytogether.MyGroupActivity"/>
+        <activity android:name=".activity.palytogether.GroupDynamicActivity"/>
 
         <!-- 树洞 -->
         <activity android:name=".activity.treehole.TreeHoleActivity"
