--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
-
 android {
+
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile files('libs/MobCommons-2017.0801.1522.jar')
     compile files('libs/ShareSDK-QZone-3.0.1.jar')
-    compile name:'SMSSDK-3.0.0',ext:'aar'
-    compile name:'SMSSDKGUI-3.0.0',ext:'aar'
+    compile name: 'SMSSDK-3.0.0', ext: 'aar'
+    compile name: 'SMSSDKGUI-3.0.0', ext: 'aar'
+    compile project(':easeui')
 }
